# INET-Monday-Spring2023-Team-5

./: .coveragerc  .flake8  .gitignore  .travis.yml  README.md  db.sqlite3  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.ebextensions/: django.config
GIS/: location.py
bam/: settings.py  urls.py  wsgi.py
businesses/: apps.py  urls.py  views.py
businesses/static/businesses/: businesses.scss
businesses/templates/businesses/: index.html
fixtures/: crime.json  crime_rate.json  data.json  neighborhood.json  neighborhood_new.json  noise.json  test.json
homepage/: urls.py  views.py
neighborhood/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
neighborhood/migrations/: 0001_initial.py  0002_delete_listing.py  0003_auto_20230330_0606.py  0004_auto_20230501_1638.py  0005_auto_20230504_2238.py
neighborhoods/: apps.py  views.py
scripts/: crime-data.py  crime_data.py  crime_statistic.py  get_crime_rate.py  location.py  migration_noise_data.py  neighborhoods.py  noise_data.py
scripts/datasets/: crime_rates  neighborhoods.csv
static/homepage/: homepage.scss
static/js/: location.js
static/neighborhoods/: neighborhoods.scss
static/scss/: base.scss
static/users/: users.scss
templates/: base.html
tests/: models_uni_test.py  test_business.py  test_homepage.py  test_marketplace.py  test_models.py  test_neighborhood.py  test_services.py  test_urls.py  test_users.py  test_utils.py  test_views.py
users/: admin.py  models.py  urls.py  views.py
users/marketplace/: apps.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20230329_2355.py  0002_listing_neighborhood.py  0003_listing.py  0003_listing_price.py  0004_auto_20230408_0645.py  0004_auto_20230417_0204.py  0004_delete_listing.py  0005_delete_business.py
users/services/: apps.py  models.py  urls.py  views.py
(+569 files in other folders)
