[tool.poetry]
name = "bam"
version = "0.1.0"
description = ""
authors = [
    "Elfarouk Saleh <as14985@nyu.edu>",
    "Chenyu Gu <cg4053@nyu.edu>",
    "Weiye Sun <ws2309@nyu.edu>",
    "Stephanie Hou <sh6403@nyu.edu>",
    "Venu Vardhan Reddy Tekula <vt2182@nyu.edu>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2"
python-decouple = "3.4"
django-compressor = "^4.3.1"
django-libsass = "^0.9"
django-bootstrap-icons = "^0.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"
coveralls = "^3.3.1"

[tool.black]
line-length = 88
preview = true
target-version = ['py37']
exclude = '''
/(
    \.git
  | \.venv
  | migrations
  | scripts
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
